--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,3 +1,7 @@
+@import "@fontsource/manrope/400.css";
+@import "@fontsource/manrope/600.css";
+@import "@fontsource/manrope/800.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -9,8 +13,9 @@ html {
 }
 
 body {
-  height: 100%;
   margin: 0;
+  height: 100%;
+  font-family: "Manrope", sans-serif;
 }
 
 li {
