--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -14,6 +14,8 @@ html {
 
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   font-family: "Manrope", sans-serif;
 }
